--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <!-- relative links for local file development, change to absolute links for production -->
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/about.html">About</a></li>
-                <li><a href="pages/faq.html">FAQ</a></li>
+                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="/pages/faq.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
